# 6123safenest

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  MEMBER_CONTRIBUTIONS.md  README.md  Risk_Agent.env  config.py  main.py  plan.md  pyproject.toml
adk_apps/safenest/: __init__.py  agent.py
agents/: __init__.py  contract_agent.py  contract_clauses.py  contract_compare.py  contract_risk.py  intake_agent.py  location_agent.py  orchestrator.py  price_agent.py  risk_agent.py  synthesizer.py
data/: cea_agents.csv  listings.csv  mrt_stations.json
data/sample_contract/Grop A/: Form 4 - Estate Agency Agreement for the Lease of Residential Property by a Tenant Test A.docx  测试集说明.md
docs/: architecture.md  demo_script.md  evaluation_report.md  guardrail_report.md
evaluation/: eval_runner.py
guardrails/: __init__.py  injection_filter.py  pii_detector.py  scope_guard.py
safenest_cli/: __init__.py  web_entry.py
tests/: test_contract.py  test_contract_clauses.py  test_contract_compare.py  test_contract_risk.py  test_guardrails.py  test_injection_cases.py  test_intake_agent.py  test_integration.py  test_location.py  test_main_runner.py  test_orchestrator_a.py  test_pdf_parser.py  test_price.py  test_risk.py  test_vector_store.py
tools/: cache.py  csv_lookup.py  pdf_parser.py  vector_store.py
