[tool.poetry]
name = "safenest"
version = "0.1.0"
description = "SafeNest — Singapore rental agentic assistant (CA6123)"
authors = ["SafeNest Team"]
readme = "README.md"
packages = [{ include = "safenest_cli" }]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "*"
chromadb = "*"
pypdf = "*"
pdfplumber = "*"
presidio-analyzer = "*"
pydantic = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.poetry.scripts]
safenest-web = "safenest_cli.web_entry:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
